add support for inferring variables and references from translations
